<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/contactList"
            android:backgroundTint="@color/white"
            android:textColor="#3B84F1"
            android:padding="18dp"
            android:layout_marginTop="18dp"
            android:textSize="20sp"
            android:id="@+id/contactList_btn">
        </Button>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/addContact"
            android:backgroundTint="@color/white"
            android:textColor="#3B84F1"
            android:padding="18dp"
            android:layout_marginTop="18dp"
            android:textSize="20sp"
            android:id="@+id/addContact_btn">
        </Button>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:backgroundTint="@color/white"
            android:textColor="#3B84F1"
            android:padding="18dp"
            android:layout_marginTop="18dp"
            android:textSize="20sp"
            android:id="@+id/exit_btn">
        </Button>



    </LinearLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:src="@drawable/logo_es"
        android:contentDescription="@string/logoengenharia"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"/>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/info_incon"
        android:contentDescription="@string/logoengenharia"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:id="@+id/info"
        />

</RelativeLayout>