<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="48sp"
            android:textAlignment="center"
            android:text="@string/about"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:layout_marginBottom="96dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="80dp"
            android:background="@android:color/transparent"
            android:textAlignment="center"
            android:text="@string/textAboutApp"/>

    </LinearLayout>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:src="@drawable/logo_unc"
        android:contentDescription="@string/logoengenharia"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>