<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/contactList"
            android:backgroundTint="@color/white"
            android:textColor="#3B84F1"
            android:padding="18dp"
            android:layout_marginTop="18dp"
            android:textSize="20sp"
            android:id="@+id/contactList_btn">
        </Button>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/addContact"
            android:backgroundTint="@color/white"
            android:textColor="#3B84F1"
            android:padding="18dp"
            android:layout_marginTop="18dp"
            android:textSize="20sp"
            android:id="@+id/addContact_btn">
        </Button>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:backgroundTint="@color/white"
            android:textColor="#3B84F1"
            android:padding="18dp"
            android:layout_marginTop="18dp"
            android:textSize="20sp"
            android:id="@+id/exit_btn">
        </Button>



    </LinearLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:src="@drawable/logo_es"
        android:contentDescription="@string/logoengenharia"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Arthur e Bruno"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>